Add cache control headers and version parameters to CSS/JS assets to prevent browser caching issues (no more Ctrl+F5 needed)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>This is Fuerteventura - Tu guía completa de la isla</title>
     <meta name="theme-color" content="#0f4c81">
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css?v=2025110501">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="description" content="Descubre Fuerteventura: noticias, turismo, alojamiento, playas y mucho más sobre esta maravillosa isla canaria.">
     <!-- Open Graph -->
@@ -175,10 +175,10 @@
             }
         });
     </script>
-    <script src="js/main.js" defer></script>
-    <script src="js/proxy-discovery.js" defer></script>
+    <script src="js/main.js?v=2025110501" defer></script>
+    <script src="js/proxy-discovery.js?v=2025110501" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js" defer></script>
-    <script src="js/image-extractor.js" defer></script>
-    <script src="js/content-loader.js" defer></script>
+    <script src="js/image-extractor.js?v=2025110501" defer></script>
+    <script src="js/content-loader.js?v=2025110501" defer></script>
 </body>
 </html>
