--- a/noticia.html
+++ b/noticia.html
@@ -1,11 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Noticia - This is Fuerteventura</title>
 	<link rel="manifest" href="manifest.webmanifest">
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/styles.css?v=2025110501">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 	<meta name="description" content="Lee la noticia seleccionada de Fuerteventura con detalles, imágenes y fuente.">
 </head>
@@ -78,8 +78,8 @@
 		</div>
 	</footer>
 
-	<script src="js/main.js" defer></script>
+	<script src="js/main.js?v=2025110501" defer></script>
 	<script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js" defer></script>
-	<script src="js/article-loader.js" defer></script>
+	<script src="js/article-loader.js?v=2025110501" defer></script>
 </body>
 </html>
