--- a/noticias.html
+++ b/noticias.html
@@ -6,7 +6,7 @@
     <title>Noticias de Fuerteventura - This is Fuerteventura</title>
     <meta name="theme-color" content="#0f4c81">
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css?v=2025110501">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="description" content="Las últimas noticias de Fuerteventura: actualidad, eventos, turismo y más.">
     <!-- Open Graph -->
@@ -179,11 +179,11 @@
             }
         });
     </script>
-    <script src="js/main.js" defer></script>
-    <script src="js/proxy-discovery.js" defer></script>
+    <script src="js/main.js?v=2025110501" defer></script>
+    <script src="js/proxy-discovery.js?v=2025110501" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js" defer></script>
-    <script src="js/image-extractor.js" defer></script>
-    <script src="js/content-loader.js" defer></script>
-    <script src="js/news.js" defer></script>
+    <script src="js/image-extractor.js?v=2025110501" defer></script>
+    <script src="js/content-loader.js?v=2025110501" defer></script>
+    <script src="js/news.js?v=2025110501" defer></script>
 </body>
 </html>
