--- a/turismo.html
+++ b/turismo.html
@@ -1,11 +1,11 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turismo en Fuerteventura - Lugares que visitar</title>
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css?v=2025110501">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="description" content="Descubre los mejores lugares turísticos de Fuerteventura: parques naturales, pueblos históricos, museos y mucho más.">
 </head>
@@ -225,6 +225,6 @@
         </div>
     </footer>
 
-    <script src="js/main.js" defer></script>
+    <script src="js/main.js?v=2025110501" defer></script>
 </body>
 </html>
