--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>This is Fuerteventura - Tu guía completa de la isla</title>
     <meta name="theme-color" content="#0f4c81">
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css?v=2025110501">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="description" content="Descubre Fuerteventura: noticias, turismo, alojamiento, playas y mucho más sobre esta maravillosa isla canaria.">
     <!-- Open Graph -->
@@ -151,21 +151,34 @@
 
     <script>
         // Si estamos en Netlify (o disponible el endpoint), usar Functions como proxy
-        (function(){
+        // Crear una Promise que otros scripts puedan esperar
+        window.__RSS_PROXY_READY = new Promise((resolve) => {
             try {
                 const controller = new AbortController();
-                const id = setTimeout(() => controller.abort(), 700);
+                const id = setTimeout(() => controller.abort(), 1500);
                 fetch('/.netlify/functions/api/health', { signal: controller.signal, cache: 'no-store' })
-                    .then(r => { if (r && r.ok) { window.__RSS_PROXY_URL = location.origin + '/.netlify/functions'; } })
-                    .catch(() => {})
-                    .finally(() => clearTimeout(id));
-            } catch (_) {}
-        })();
+                    .then(r => { 
+                        if (r && r.ok) { 
+                            window.__RSS_PROXY_URL = location.origin + '/.netlify/functions';
+                            console.log('✓ Netlify Functions detectadas:', window.__RSS_PROXY_URL);
+                        } 
+                    })
+                    .catch((e) => {
+                        console.log('ℹ Netlify Functions no disponibles, intentando proxy local');
+                    })
+                    .finally(() => {
+                        clearTimeout(id);
+                        resolve();
+                    });
+            } catch (_) {
+                resolve();
+            }
+        });
     </script>
-    <script src="js/main.js" defer></script>
-    <script src="js/proxy-discovery.js" defer></script>
+    <script src="js/main.js?v=2025110501" defer></script>
+    <script src="js/proxy-discovery.js?v=2025110501" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js" defer></script>
-    <script src="js/image-extractor.js" defer></script>
-    <script src="js/content-loader.js" defer></script>
+    <script src="js/image-extractor.js?v=2025110501" defer></script>
+    <script src="js/content-loader.js?v=2025110501" defer></script>
 </body>
 </html>
