Fix: unify noticias.html header size with other pages (use hero class instead of page-header)

--- a/noticias.html
+++ b/noticias.html
@@ -56,9 +56,9 @@
     </header>
 
     <main id="main">
-    <section class="page-header">
-        <div class="page-header-content">
-            <h1>Noticias de Fuerteventura</h1>
+    <section class="hero">
+        <div class="hero-content">
+            <h2>Noticias de Fuerteventura</h2>
             <p>Mantente al día con las últimas novedades de la isla</p>
         </div>
     </section>
