last message: Mejora de márgenes para secciones de contenido de playas

--- a/index.html
+++ b/index.html
@@ -76,25 +76,25 @@
         <h2>Explora Fuerteventura</h2>
         <div class="category-grid">
             <div class="category-card">
-                <img src="images/Fuerteventura.jpeg" alt="Noticias de Fuerteventura" loading="lazy">
+                <img src="images/playa_del_castillo_caleta_de_fuste.webp" alt="Noticias de Fuerteventura" loading="lazy">
                 <h3>Noticias</h3>
                 <p>Mantente al día con las últimas noticias de la isla.</p>
                 <a href="noticias.html" class="btn">Ver noticias</a>
             </div>
             <div class="category-card">
-                <img src="images/Fuerteventura.jpeg" alt="Turismo en Fuerteventura" loading="lazy">
+                <img src="images/betancuria.webp" alt="Turismo en Fuerteventura" loading="lazy">
                 <h3>Turismo</h3>
                 <p>Descubre los mejores lugares para visitar.</p>
                 <a href="turismo.html" class="btn">Explorar</a>
             </div>
             <div class="category-card">
-                <img src="images/Fuerteventura.jpeg" alt="Alojamiento en Fuerteventura" loading="lazy">
+                <img src="images/vistalobos.jpg" alt="Alojamiento en Fuerteventura" loading="lazy">
                 <h3>Alojamiento</h3>
                 <p>Encuentra el lugar perfecto para hospedarte.</p>
                 <a href="alojamiento.html" class="btn">Ver opciones</a>
             </div>
             <div class="category-card">
-                <img src="images/Fuerteventura.jpeg" alt="Playas de Fuerteventura" loading="lazy">
+                <img src="images/playa-del-cotillo.jpg" alt="Playas de Fuerteventura" loading="lazy">
                 <h3>Playas</h3>
                 <p>Las mejores playas de arena blanca y aguas cristalinas.</p>
                 <a href="playas.html" class="btn">Descubrir</a>
