--- a/turismo.html
+++ b/turismo.html
@@ -95,6 +95,177 @@
                         <span><i class="fas fa-ticket-alt"></i> Reserva</span>
                     </div>
                     <a href="#" class="btn">Más información</a>
+                </div></article>
+
+            <article class="tourism-card">
+                <img src="images/turismo/el-cotillo.avif" alt="El Cotillo" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="tourism-info">
+                    <h3>El Cotillo</h3>
+                    <p>Pueblo pesquero con encanto en la costa norte.</p>
+                    <div class="features">
+                        <span><i class="fas fa-fish"></i> Pescado fresco</span>
+                    </div>
+                    <a href="#" class="btn">Más información</a>
+                </div></article>
+
+            <article class="tourism-card">
+                <img src="images/turismo/cofete.jpg" alt="Playa de Cofete" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="tourism-info">
+                    <h3>Playa de Cofete</h3>
+                    <p>Una de las playas más salvajes y vírgenes de Canarias, rodeada de montañas y con un ambiente místico. El acceso por pista de tierra añade aventura, pero las vistas merecen cada bache.</p>
+                    <div class="features">
+                        <span><i class="fas fa-mountain"></i> Naturaleza salvaje</span>
+                        <span><i class="fas fa-camera-retro"></i> Fotografía</span>
+                        <span><i class="fas fa-car"></i> 4x4 recomendado</span>
+                    </div>
+                    <a href="#" class="btn">Más información</a>
+                </div>
+            </article>
+
+            <article class="tourism-card">
+                <img src="images/turismo/ajuy.webp" alt="Cuevas de Ajuy" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="tourism-info">
+                    <h3>Cuevas de Ajuy</h3>
+                    <p>Formaciones geológicas milenarias en la costa oeste, con cuevas excavadas por el mar y acantilados de roca volcánica. Pasea por el sendero costero y contempla la fuerza del océano.</p>
+                    <div class="features">
+                        <span><i class="fas fa-rock"></i> Geología</span>
+                        <span><i class="fas fa-water"></i> Cuevas marinas</span>
+                        <span><i class="fas fa-walking"></i> Sendero</span>
+                    </div>
+                    <a href="#" class="btn">Más información</a>
+                </div>
+            </article>
+
+            <article class="tourism-card">
+                <img src="images/turismo/la-oliva.avif" alt="La Oliva" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="tourism-info">
+                    <h3>La Oliva</h3>
+                    <p>Villa histórica con la iglesia de Nuestra Señora de Candelaria y la Casa de los Coroneles, una de las edificaciones más importantes de la arquitectura civil canaria.</p>
+                    <div class="features">
+                        <span><i class="fas fa-church"></i> Patrimonio</span>
+                        <span><i class="fas fa-home"></i> Arquitectura</span>
+                        <span><i class="fas fa-palette"></i> Centro de arte</span>
+                    </div>
+                    <a href="#" class="btn">Más información</a>
+                </div></article>
+
+            <article class="tourism-card">
+                <img src="images/turismo/mirador-morro-velosa.jpg" alt="Mirador de Morro Velosa" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="tourism-info">
+                    <h3>Mirador de Morro Velosa</h3>
+                    <p>Diseñado por César Manrique, ofrece vistas panorámicas a 360 grados del interior de Fuerteventura.</p>
+                    <div class="features">
+                        <span><i class="fas fa-eye"></i> Vistas panorámicas</span>
+                    </div>
+                    <a href="#" class="btn">Más información</a>
+                </div>
+            </article>
+
+            <article class="tourism-card">
+                <img src="images/turismo/caleta-de-fuste.jpg" alt="Caleta de Fuste" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="tourism-info">
+                    <h3>Caleta de Fuste</h3>
+                    <p>Centro turístico familiar con playa protegida, ideal para niños. Campo de golf y puerto deportivo.</p>
+                    <div class="features">
+                        <span><i class="fas fa-child"></i> Familiar</span>
+                    </div>
+                    <a href="#" class="btn">Más información</a>
+                </div>
+            </article>
+
+            <article class="tourism-card">
+                <img src="images/turismo/puerto-del-rosario-.jpg" alt="Puerto del Rosario" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="tourism-info">
+                    <h3>Puerto del Rosario</h3>
+                    <p>Capital de la isla con murales artísticos urbanos, museos de arte y la Casa Museo Unamuno.</p>
+                    <div class="features">
+                        <span><i class="fas fa-paint-brush"></i> Arte urbano</span>
+                    </div>
+                    <a href="#" class="btn">Más información</a>
+                </div>
+            </article>
+
+            <article class="tourism-card">
+                <img src="images/turismo/tindaya.webp" alt="Montaña de Tindaya" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="tourism-info">
+                    <h3>Montaña de Tindaya</h3>
+                    <p>Montaña sagrada para los aborígenes majoreros, con grabados rupestres en su cumbre.</p>
+                    <div class="features">
+                        <span><i class="fas fa-history"></i> Arqueología</span>
+                    </div>
+                    <a href="#" class="btn">Más información</a>
+                </div>
+            </article>
+
+            <article class="tourism-card">
+                <img src="images/turismo/parque-natural-jandia.jpg" alt="Parque Natural de Jandía" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="tourism-info">
+                    <h3>Parque Natural de Jandía</h3>
+                    <p>Reserva natural en el sur de la isla con playas infinitas y fauna endémica.</p>
+                    <div class="features">
+                        <span><i class="fas fa-leaf"></i> Naturaleza</span>
+                    </div>
+                    <a href="#" class="btn">Más información</a>
+                </div>
+            </article>
+
+            <article class="tourism-card">
+                <img src="images/turismo/ecomuseo-la-alcogida.jpg" alt="Ecomuseo La Alcogida" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="tourism-info">
+                    <h3>Ecomuseo La Alcogida</h3>
+                    <p>Conjunto de casas tradicionales restauradas que muestran la vida rural de Fuerteventura.</p>
+                    <div class="features">
+                        <span><i class="fas fa-home"></i> Arquitectura tradicional</span>
+                    </div>
+                    <a href="#" class="btn">Más información</a>
+                </div>
+            </article>
+
+            <article class="tourism-card">
+                <img src="images/turismo/molino-antigua.jpg" alt="Molino de Antigua" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="tourism-info">
+                    <h3>Molino de Antigua</h3>
+                    <p>Molino de viento restaurado convertido en museo del gofio y centro de artesanía.</p>
+                    <div class="features">
+                        <span><i class="fas fa-wind"></i> Molino</span>
+                    </div>
+                    <a href="#" class="btn">Más información</a>
+                </div>
+            </article>
+
+            <article class="tourism-card">
+                <img src="images/turismo/popcorn-beach.jpg" alt="Playa de las Palomitas" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="tourism-info">
+                    <h3>Playa de las Palomitas</h3>
+                    <p>Pequeña cala cubierta de palomitas blancas formadas por algas calcáreas fosilizadas.</p>
+                    <div class="features">
+                        <span><i class="fas fa-star"></i> Fenómeno natural</span>
+                    </div>
+                    <a href="#" class="btn">Más información</a>
+                </div>
+            </article>
+
+            <article class="tourism-card">
+                <img src="images/turismo/salinas-carmen.webp" alt="Salinas del Carmen" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="tourism-info">
+                    <h3>Salinas del Carmen</h3>
+                    <p>Salinas artesanales en funcionamiento desde el siglo XVIII con museo de la sal.</p>
+                    <div class="features">
+                        <span><i class="fas fa-water"></i> Salinas</span>
+                    </div>
+                    <a href="#" class="btn">Más información</a>
+                </div>
+            </article>
+
+            <article class="tourism-card">
+                <img src="images/turismo/punta-pesebre.jpg" alt="Punta de Pesebre" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <div class="tourism-info">
+                    <h3>Punta de Pesebre</h3>
+                    <p>Punto extremo norte de Fuerteventura con vistas a Lanzarote y acantilados dramáticos.</p>
+                    <div class="features">
+                        <span><i class="fas fa-compass"></i> Extremo norte</span>
+                    </div>
+                    <a href="#" class="btn">Más información</a>
                 </div>
             </article>
         </div>
@@ -228,3 +399,21 @@
     <script src="js/main.js?v=2025110501" defer></script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
