Fix: Force cache refresh for tourism images with version parameters

--- a/turismo.html
+++ b/turismo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Turismo en Fuerteventura - Lugares que visitar</title>
     <link rel="manifest" href="manifest.webmanifest">
-    <link rel="stylesheet" href="css/styles.css?v=2025110806">
+    <link rel="stylesheet" href="css/styles.css?v=2025110807">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <meta name="description" content="Descubre los mejores lugares turísticos de Fuerteventura: parques naturales, pueblos históricos, museos y mucho más.">
 </head>
@@ -43,7 +43,7 @@
         <h2>Lugares de interés</h2>
         <div class="tourism-grid">
             <article class="tourism-card">
-                <img src="images/turismo/corralejo-dunas.jpg" alt="Parque Natural de Corralejo" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/corralejo-dunas.jpg?v=2" alt="Parque Natural de Corralejo" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
                 <div class="tourism-info">
                     <h3>Parque Natural de Corralejo</h3>
                     <p>Explora las impresionantes dunas de arena dorada y las vistas al mar cristalino en uno de los parques naturales más emblemáticos de la isla. Las Grandes Playas se extienden por kilómetros junto al azul turquesa del Atlántico: madruga para evitar el viento y disfruta de un paseo entre dunas.</p>
@@ -57,7 +57,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/betancuria.jpg" alt="Betancuria" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/betancuria.jpg?v=2" alt="Betancuria" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
                 <div class="tourism-info">
                     <h3>Betancuria</h3>
                     <p>Visita la antigua capital de Fuerteventura, un pueblo histórico con arquitectura colonial y museos fascinantes. Recorre sus calles empedradas, entra a la iglesia de Santa María y toma un café con vistas al barranco.</p>
@@ -71,7 +71,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/faro-morro-jable.jpg" alt="Faro de Morro Jable" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/faro-morro-jable.jpg?v=2" alt="Faro de Morro Jable" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
                 <div class="tourism-info">
                     <h3>Faro de Morro Jable</h3>
                     <p>Contempla las mejores puestas de sol de la isla desde este emblemático faro en el sur de Fuerteventura. Al atardecer, el cielo se tiñe de tonos dorados y rosados sobre la playa de Jandía.</p>
@@ -85,7 +85,7 @@
             </article>
 
             <article class="tourism-card">
-                <img src="images/turismo/isla-de-lobos.jpg" alt="Isla de Lobos" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
+                <img src="images/turismo/isla-de-lobos.jpg?v=2" alt="Isla de Lobos" loading="lazy" onerror="this.onerror=null;this.src='images/Fuerteventura.jpeg';">
                 <div class="tourism-info">
                     <h3>Isla de Lobos</h3>
                     <p>Descubre este paraíso natural a solo 15 minutos en barco desde Corralejo, perfecto para senderismo y snorkel. Reserva con tiempo el permiso de visita y sigue el sendero hasta el Puertito para un baño inolvidable.</p>
