added phone contact information in the footer of several HTML files.

--- a/alojamiento.html
+++ b/alojamiento.html
@@ -228,7 +228,7 @@
             <div class="footer-contact">
                 <h4>Contacto</h4>
                 <p><i class="fas fa-envelope"></i> info@thisisfuerteventura.es</p>
-                <p><i class="fas fa-phone"></i> +34 XXX XXX XXX</p>
+                <p><i class="fas fa-phone"></i> +34 633 938 539</p>
             </div>
         </div>
         <div class="footer-bottom">
