--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
     <script src="js/main.js?v=2025110901" defer></script>
     <script src="js/proxy-discovery.js?v=2025110901" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/dompurify@2.4.0/dist/purify.min.js" defer></script>
+    <script src="js/feed-utils.js?v=2025110901" defer></script>
     <script src="js/image-extractor.js?v=2025110901" defer></script>
     <script src="js/content-loader.js?v=2025110901" defer></script>
 </body>
