--- a/noticia.html
+++ b/noticia.html
@@ -4,18 +4,20 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Noticia - This is Fuerteventura</title>
+	<meta name="theme-color" content="#0f4c81">
 	<link rel="manifest" href="manifest.webmanifest">
 	<link rel="stylesheet" href="css/styles.css?v=2025110810">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 	<meta name="description" content="Lee la noticia seleccionada de Fuerteventura con detalles, imágenes y fuente.">
 </head>
 <body>
+	<a class="skip-link" href="#main">Saltar al contenido principal</a>
 	<header>
 		<div class="logo-container">
-			<img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo">
+			<img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo" loading="lazy">
 			<h1>This is Fuerteventura</h1>
 		</div>
-		<nav>
+		<nav aria-label="Navegación principal">
 			<ul>
 				<li><a href="index.html">Inicio</a></li>
 				<li><a href="noticias.html">Noticias</a></li>
@@ -31,7 +33,7 @@
 		</div>
 	</header>
 
-	<main class="article-page">
+	<main class="article-page" id="main">
 		<div class="container">
 			<a href="noticias.html" class="btn" style="margin: 20px 0; display:inline-flex; align-items:center; gap:8px;">
 				<i class="fas fa-chevron-left"></i> Volver a noticias
@@ -45,7 +47,7 @@
 	<footer>
 		<div class="footer-content">
 			<div class="footer-logo">
-				<img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo">
+				<img src="images/logo.jpg" alt="This is Fuerteventura Logo" class="logo" loading="lazy">
 				<h3>This is Fuerteventura</h3>
 			</div>
 			<div class="footer-links">
