--- a/noticia.html
+++ b/noticia.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 	<meta name="description" content="Lee la noticia seleccionada de Fuerteventura con detalles, imágenes y fuente.">
 </head>
-<body>
+<body class="article-page">
 	<a class="skip-link" href="#main">Saltar al contenido principal</a>
 	<header>
 		<div class="logo-container">
