Fix mapas playas: reemplazados Dynamic Links (maps.app.goo.gl) rotos por URLs estables de Google Maps Search con nombres de playas y añadido rel="noopener noreferrer" para seguridad.

--- a/playas.html
+++ b/playas.html
@@ -71,7 +71,7 @@
                             <span><i class="fas fa-wind"></i> Windsurf</span>
                             <span><i class="fas fa-utensils"></i> Chiringuitos</span>
                         </div>
-                        <a href="https://maps.app.goo.gl/9QYVZCqKz8xYnRms7" target="_blank" rel="noopener" class="btn btn-small">
+                        <a href="https://www.google.com/maps/search/?api=1&query=Grandes%20Playas%20de%20Corralejo%20Fuerteventura" target="_blank" rel="noopener noreferrer" class="btn btn-small">
                             <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
                         </a>
                     </div>
@@ -92,7 +92,7 @@
                             <span><i class="fas fa-exclamation-triangle"></i> Corrientes fuertes</span>
                             <span><i class="fas fa-car"></i> 4x4 recomendado</span>
                         </div>
-                        <a href="https://maps.app.goo.gl/eQqH9BrZU5pxjvWc6" target="_blank" rel="noopener" class="btn btn-small">
+                        <a href="https://www.google.com/maps/search/?api=1&query=Playa%20de%20Cofete%20Fuerteventura" target="_blank" rel="noopener noreferrer" class="btn btn-small">
                             <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
                         </a>
                     </div>
@@ -113,7 +113,7 @@
                             <span><i class="fas fa-fish"></i> Snorkel</span>
                             <span><i class="fas fa-parking"></i> Parking cercano</span>
                         </div>
-                        <a href="https://maps.app.goo.gl/fQ3t7wkB9nMz8zGK8" target="_blank" rel="noopener" class="btn btn-small">
+                        <a href="https://www.google.com/maps/search/?api=1&query=Lagos%20de%20El%20Cotillo%20Fuerteventura" target="_blank" rel="noopener noreferrer" class="btn btn-small">
                             <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
                         </a>
                     </div>
@@ -134,7 +134,7 @@
                             <span><i class="fas fa-school"></i> Escuelas</span>
                             <span><i class="fas fa-umbrella-beach"></i> Servicios completos</span>
                         </div>
-                        <a href="https://maps.app.goo.gl/xZXF4qYRPnN5Y7xU6" target="_blank" rel="noopener" class="btn btn-small">
+                        <a href="https://www.google.com/maps/search/?api=1&query=Playa%20de%20Sotavento%20Costa%20Calma%20Fuerteventura" target="_blank" rel="noopener noreferrer" class="btn btn-small">
                             <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
                         </a>
                     </div>
@@ -155,7 +155,7 @@
                             <span><i class="fas fa-fish"></i> Pueblo pesquero</span>
                             <span><i class="fas fa-utensils"></i> Restaurantes</span>
                         </div>
-                        <a href="https://maps.app.goo.gl/vK8qMYz6Tp3JxRWJ9" target="_blank" rel="noopener" class="btn btn-small">
+                        <a href="https://www.google.com/maps/search/?api=1&query=Playa%20de%20Ajuy%20Fuerteventura" target="_blank" rel="noopener noreferrer" class="btn btn-small">
                             <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
                         </a>
                     </div>
@@ -176,7 +176,7 @@
                             <span><i class="fas fa-umbrella-beach"></i> Todos los servicios</span>
                             <span><i class="fas fa-ship"></i> Excursiones</span>
                         </div>
-                        <a href="https://maps.app.goo.gl/JkH3rM8vC6Sq7ePe8" target="_blank" rel="noopener" class="btn btn-small">
+                        <a href="https://www.google.com/maps/search/?api=1&query=Playa%20de%20Morro%20Jable%20Fuerteventura" target="_blank" rel="noopener noreferrer" class="btn btn-small">
                             <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
                         </a>
                     </div>
@@ -197,7 +197,7 @@
                             <span><i class="fas fa-parking"></i> Parking</span>
                             <span><i class="fas fa-heart"></i> Muy popular</span>
                         </div>
-                        <a href="https://maps.app.goo.gl/RnP7h5WxqsNfY2Yz8" target="_blank" rel="noopener" class="btn btn-small">
+                        <a href="https://www.google.com/maps/search/?api=1&query=Playa%20de%20La%20Concha%20El%20Cotillo%20Fuerteventura" target="_blank" rel="noopener noreferrer" class="btn btn-small">
                             <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
                         </a>
                     </div>
@@ -218,7 +218,7 @@
                             <span><i class="fas fa-parking"></i> Parking gratuito</span>
                             <span><i class="fas fa-umbrella-beach"></i> Servicios básicos</span>
                         </div>
-                        <a href="https://maps.app.goo.gl/mJNb8pKvY3Q4rFrTA" target="_blank" rel="noopener" class="btn btn-small">
+                        <a href="https://www.google.com/maps/search/?api=1&query=Playa%20de%20Esquinzo%20Butihondo%20Fuerteventura" target="_blank" rel="noopener noreferrer" class="btn btn-small">
                             <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
                         </a>
                     </div>
@@ -239,7 +239,7 @@
                             <span><i class="fas fa-lighthouse"></i> Faro cercano</span>
                             <span><i class="fas fa-umbrella-beach"></i> Menos concurrida</span>
                         </div>
-                        <a href="https://maps.app.goo.gl/uN6K9YqPxM5cVLdJ7" target="_blank" rel="noopener" class="btn btn-small">
+                        <a href="https://www.google.com/maps/search/?api=1&query=Playa%20del%20Matorral%20Fuerteventura" target="_blank" rel="noopener noreferrer" class="btn btn-small">
                             <i class="fas fa-map-marked-alt"></i> Ver en Google Maps
                         </a>
                     </div>
