--- a/noticia.html
+++ b/noticia.html
@@ -5,10 +5,20 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Noticia - This is Fuerteventura</title>
 	<meta name="theme-color" content="#0f4c81">
+	<link rel="canonical" href="https://thisisfuerteventura.netlify.app/noticia.html">
 	<link rel="manifest" href="manifest.webmanifest">
 	<link rel="stylesheet" href="css/styles.css?v=2025111001">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-	<meta name="description" content="Lee la noticia seleccionada de Fuerteventura con detalles, imágenes y fuente.">
+	<meta name="description" content="Lee las últimas noticias de Fuerteventura con información detallada, imágenes y fuentes verificadas.">
+	<meta name="robots" content="index, follow, max-image-preview:large">
+	
+	<!-- Open Graph - Serán actualizados dinámicamente por JS -->
+	<meta property="og:type" content="article">
+	<meta property="og:site_name" content="This is Fuerteventura">
+	<meta property="og:locale" content="es_ES">
+	
+	<!-- Twitter Cards - Serán actualizados dinámicamente por JS -->
+	<meta name="twitter:card" content="summary_large_image">
 </head>
 <body class="article-page">
 	<a class="skip-link" href="#main">Saltar al contenido principal</a>
